--- a/.gitconfig
+++ b/.gitconfig
@@ -1,43 +1,64 @@
-[alias]
-	# View the SHA, description, and history graph of the latest 20 commits
-	l = log --pretty=oneline -n 20 --graph
-	# View the current working tree status using the short format
-	s = status -s
-	# Show the diff between the latest commit and the current state
-	d = !"git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat"
-	# `git di $number` shows the diff between the state `$number` revisions ago and the current state
-	di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
-	# Pull in remote changes for the current repository and all its submodules
-	p = !"git pull; git submodule foreach git pull origin master"
-	# Clone a repository including all submodules
-	c = clone --recursive
-	# Commit all changes
-	ca = !git add -A && git commit -av
-	# Switch to a branch, creating it if necessary
-	go = checkout -B
-	# Show verbose output about tags, branches or remotes
-	tags = tag -l
-	branches = branch -a
-	remotes = remote -v
-	# Credit an author on the latest commit
-	credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
-	# Interactive rebase with the given number of latest commits
-	reb = "!r() { git rebase -i HEAD~$1; }; r"
-
+[user]
+	name = plbabin
+	email = plbabin@gmail.com
 [apply]
-	# Detect whitespace errors when applying a patch
-	whitespace = fix
-
+    whitespace = nowarn
 [core]
-	# Use custom `.gitignore` and `.gitattributes`
-	excludesfile = ~/.gitignore
-	attributesfile = ~/.gitattributes
-	# Treat spaces before tabs, lines that are indented with 8 or more spaces, and all kinds of trailing whitespace as an error
-	whitespace = space-before-tab,indent-with-non-tab,trailing-space
+    excludesfile = ~/.gitignore
+    attributesfile = ~/.gitattributes
+    editor = subl --wait
 
+[alias]
+  a       = add
+  co      = checkout
+  ci      = commit
+  cl      = clone
+  st      = status -sb
+  br      = branch
+  m       = merge --no-ff
+  so      = show --pretty=format: --name-only
+  s       = stash
+  sp      = stash pop
+  type    = cat-file -t
+  dump    = cat-file -p
+  amend   = commit --amend
+
+  r       = reset
+  r1      = reset HEAD^
+  r2      = reset HEAD^^
+  rh      = reset --hard
+  rh1     = reset HEAD^ --hard
+  rh2     = reset HEAD^^ --hard
+
+  hist    = log --graph --all --pretty=format:'%C(yellow)%h%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset'
+  ls      = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
+  ll      = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
+  lds     = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
+  l 	  = log --pretty=oneline -n 20 --graph
+  count   = shortlog -sn
+  credit  = commit --amend --author "$1 <$2>" -C HEAD 
+
+  unstage = reset HEAD --
+  u       = reset HEAD --
+  undo    = reset --soft HEAD^
+
+  pso     = push origin
+  plo     = pull origin
+
+  f       = "!git ls-files | grep -i"
+
+  la      = "!git config -l | grep alias | cut -c 7-"
+  lt      = describe --tags --abbrev=0
+
+[mergetool]
+    keepBackup = false
+[merge]
+    tool = diffmerge
+[mergetool "diffmerge"]
+    cmd = diffmerge --merge --result=$MERGED $LOCAL $BASE $REMOTE
+    trustExitCode = true
 [color]
-	# Use colors in Git commands that are capable of colored output when outputting to the terminal
-	ui = auto
+	ui = true
 [color "branch"]
 	current = yellow reverse
 	local = yellow
@@ -51,28 +72,11 @@
 	added = yellow
 	changed = green
 	untracked = cyan
-[merge]
-	# Include summaries of merged commits in newly created merge commit messages
-	log = true
-
+[push]
+	default = matching
+[help]
+	autocorrect = true
 # Use `origin` as the default remote on the `master` branch in all cases
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
-
-# URL shorthands
-[url "git@github.com:"]
-	insteadOf = "gh:"
-	pushInsteadOf = "github:"
-	pushInsteadOf = "git://github.com/"
-[url "git://github.com/"]
-	insteadOf = "github:"
-[url "git@gist.github.com:"]
-	insteadOf = "gst:"
-	pushInsteadOf = "gist:"
-	pushInsteadOf = "git://gist.github.com/"
-[url "git://gist.github.com/"]
-	insteadOf = "gist:"
-
-[push]
-	default = simple
