--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,57 @@
-# Compiled Python files
-*.pyc
+# bundler state
+/.bundle
+/vendor/bundle/
 
-# Folder view configuration files
+# git files
+*.orig
+
+# minimal Rails specific artifacts
+db/*.sqlite3
+/log/*
+tmp/*
+
+# Compiled source #
+###################
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+*.sqlite3
+tmp/
+
+# OS generated files #
+######################
 .DS_Store
-Desktop.ini
+Icon
 
-# Thumbnail cache files
-._*
-Thumbs.db
+# Textmate Files #
+######################
+*.tmproj
 
-# Files that might appear on external disks
-.Spotlight-V100
-.Trashes
+# Sublime Text 2 Files #
+######################
+*.sublime*
+
+# Color scheme #
+######################
+*.cs
