--- a/.gitconfig
+++ b/.gitconfig
@@ -31,7 +31,7 @@
   ls      = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
   ll      = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
   lds     = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
-  l 	  = log --pretty=oneline -n 20 --graph
+  l 	    = log --pretty=oneline -n 20 --graph
   count   = shortlog -sn
   credit  = commit --amend --author "$1 <$2>" -C HEAD 
 
@@ -72,7 +72,7 @@
 [push]
 	default = matching
 [help]
-	autocorrect = true
+	autocorrect = 1
 # Use `origin` as the default remote on the `master` branch in all cases
 [branch "master"]
 	remote = origin
