--- a/.gitconfig
+++ b/.gitconfig
@@ -40,7 +40,7 @@
   spf   = !git stash show -p $1 | git apply && git stash drop
   type  = cat-file -t
   dump  = cat-file -p
-  amend = commit --amend
+  amend = commit --amend --no-edit
   w     = whatchanged
 
   r   = reset
@@ -72,17 +72,22 @@
   la      = "!git config -l | grep alias | cut -c 7-"
   lt      = describe --tags --abbrev=0
   
-  workprofile = config user.email \"pierre-luc.babin@universalmind.com\"
   recap = log --since=\"24 hours ago\" --no-merges --oneline --author=plbabin@gmail.com
+  local-branches = !git branch -vv | cut -c 3- | awk '$3 !~/\\[/ { print $1 }'
 
 [mergetool]
     keepBackup = false
+# [merge]
+#     conflictstyle = diff3
+#     tool = diffmerge
+# [mergetool "diffmerge"]
+#     cmd = diffmerge --merge --result=$MERGED $LOCAL $BASE $REMOTE
+#     trustExitCode = true
 [merge]
-    conflictstyle = diff3
-    tool = diffmerge
-[mergetool "diffmerge"]
-    cmd = diffmerge --merge --result=$MERGED $LOCAL $BASE $REMOTE
-    trustExitCode = true
+  conflictstyle = diff3
+  tool = vscode
+[mergetool "vscode"]
+  cmd = code --wait $MERGED
 
 [pull]
   rebase = true
